Finishing Metier +fixing  Entity DTO